Fix virtual gamepad alignment

--- a/data/emulator.css
+++ b/data/emulator.css
@@ -255,14 +255,17 @@
     .ejs_settings_parent::after {
         right: 15px;
     }
-    .ejs_settings_leftside {
-        right: 50%
+    .ejs_settings_center_right {
+        right: -35%
     }
-    .ejs_settings_leftside::after {
-        right: 15px;
+    .ejs_settings_center_left {
+        right: -135%
     }
-    .ejs_settings_center::after {
+    .ejs_settings_center_right::after {
         right: 25%;
+    }
+    .ejs_settings_center_left::after {
+        left: 25%;
     }
     .ejs_menu_bar {
         transition: opacity .4s ease-in-out,transform .4s ease-in-out;
